[package]
name = "bitcoin-explore"
version = "0.1.4"
edition = "2021"
description = "Bitcoin Blockchain Explorer in the Terminal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind-request = "=0.1.12"
bitcoin-node-query = "=0.1.5"
sha256 = "=1.0.3"
hex-utilities = "=0.1.2"
chrono = "=0.4"
